Fixed the navbar, in order not to be overlapped by other content.

--- a/socialnetworkingapp-front/src/app/nav-bar/nav-bar.component.css
+++ b/socialnetworkingapp-front/src/app/nav-bar/nav-bar.component.css
@@ -1,6 +1,9 @@
 .navbar {
   position: fixed;
-  width: 100%;
   top: 0;
   left: 0;
+  z-index: 9999;
+  width: 100%;
+  height: 50px;
+  background-color: #00a087;
 }
